--- a/css/app.css
+++ b/css/app.css
@@ -410,7 +410,7 @@ input.searchButton {
     top: 0;
     left: 0;
     height: 3px;
-    background-color: #0A74DA;
+    background-color: fuchsia;
 }
 
 /**
