--- a/css/app.css
+++ b/css/app.css
@@ -184,6 +184,15 @@ input.searchButton {
 		margin-right: 0px;
 	}
 }
+@media (min-width: 1300px) {
+	#main {
+		width: 950px;
+        min-height: 100%;
+		padding-left:330px;
+		margin-left: 0px;
+		margin-right: 0px;
+	}
+}
 
 #content pre{
     margin-left: auto;
@@ -393,6 +402,11 @@ input.searchButton {
 		margin-left: 820px;
 	}
 }
+@media (min-width: 1300px) {
+	#back_to_top,#edit {
+		margin-left: 970px;
+	}
+}
 
 #loading, #error {
     display: none;
@@ -460,6 +474,14 @@ input.searchButton {
 @media (min-width: 1200px) {
 	#page-turning {
 		width: 800px;
+		padding-left:330px;
+		margin-left: 0px;
+		margin-right: 0px;
+	}
+}
+@media (min-width: 1300px) {
+	#page-turning {
+		width: 950px;
 		padding-left:330px;
 		margin-left: 0px;
 		margin-right: 0px;
@@ -664,5 +686,10 @@ footer p{
 @media (min-width: 1200px) {
 	footer {
 		width: 800px;
+	}
+}
+@media (min-width: 1300px) {
+	footer {
+		width: 950px;
 	}
 }
